# dostlang-module

./: LICENSE  README.md  setup.cfg
src/bhailang.egg-info/: PKG-INFO
src/dostlang/: __init__.py
src/dostlang.egg-info/: PKG-INFO
