[project]
name = "dostlang"
version = "1.0.0"
authors = [
  { name="Ujjwal", email="ujjwalhehe@gmail.com" },
]
description = "A Funny Coding Package based on python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/UjjwalxD/dostlang-module"
Issues = "https://github.com/UjjwalxD/dostlang-module"